--- a/app/src/main/res/layout/fragment_main_lenses.xml
+++ b/app/src/main/res/layout/fragment_main_lenses.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainLensesFragment">
+    tools:context=".ui.fragments.MainLensesFragment">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
