--- a/app/src/main/res/layout/fragment_main_lenses.xml
+++ b/app/src/main/res/layout/fragment_main_lenses.xml
@@ -6,4 +6,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.MainLensesFragment">
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_lenses_title"
+        style="@style/MainScreenTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Name: my name" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_lenses_replace_period"
+        style="@style/MainScreenTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_lenses_title"
+        tools:text="Period: 14" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_lenses_already_wear"
+        style="@style/MainScreenTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_lenses_replace_period"
+        tools:text="Wearing: 5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
