--- a/app/src/main/res/layout/fragment_main_lenses.xml
+++ b/app/src/main/res/layout/fragment_main_lenses.xml
@@ -39,4 +39,30 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_lenses_replace_period"
         tools:text="Wearing: 5" />
 
+    <ProgressBar
+        android:id="@+id/pb_wearing_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:scaleY="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_lenses_already_wear" />
+
+    <ImageView
+        android:id="@+id/img_lens_status"
+        android:layout_width="wrap_content"
+        android:layout_height="230dp"
+        android:layout_marginTop="32dp"
+        tools:src="@drawable/lens_damaged"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pb_wearing_progress"
+        app:layout_constraintVertical_bias="0.0" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
