--- a/app/src/main/res/layout/change_wear_status_snackbar.xml
+++ b/app/src/main/res/layout/change_wear_status_snackbar.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="@color/teal_700"
+        app:cardBackgroundColor="@color/teal"
         app:cardCornerRadius="4dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
