--- a/app/src/main/res/layout/fragment_add_lenses.xml
+++ b/app/src/main/res/layout/fragment_add_lenses.xml
@@ -32,7 +32,8 @@
             android:layout_height="match_parent"
             android:hint="@string/input_lenses_title"
             android:inputType="textCapSentences"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:maxLength="25"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -68,9 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/input_lenses_already_wear"
-            android:inputType="number"
-            android:maxLength="2"
-            android:maxLines="1" />
+            android:inputType="numberPassword"
+            android:maxLength="2" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
